added a lot more

--- a/aiitra/CMakeLists.txt
+++ b/aiitra/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
   urdf
+  tf
 )
 
 ## System dependencies are found with CMake's conventions
@@ -126,7 +127,7 @@ include_directories(
 #   src/${PROJECT_NAME}/grid3.cpp
 # )
 
-## Add cmake target dependencies of the library
+## Add cmake target dependencies ofundefined reference to `tf::TransformBroadcaster::TransformBroadcaster()' the library
 ## as an example, code may need to be generated before libraries
 ## either from message generation or dynamic reconfigure
 # add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
@@ -135,6 +136,12 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/grid3_node.cpp)
+
+
+add_executable(odomPub src/scripts/publOdom.cpp)
+add_dependencies(odomPub ${catkin_EXPORTED_TARGETS})
+target_link_libraries(odomPub ${catkin_LIBRARIES})
+
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
