--- a/aiitra/CMakeLists.txt
+++ b/aiitra/CMakeLists.txt
@@ -13,7 +13,10 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   urdf
   tf
+  cmake_modules
 )
+
+find_package(Eigen REQUIRED)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -105,10 +108,12 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
+
 #  INCLUDE_DIRS include
 #  LIBRARIES grid3
 #  CATKIN_DEPENDS roscpp rospy std_msgs
 #  DEPENDS system_lib
+
 )
 
 ###########
@@ -118,8 +123,9 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
+include
   ${catkin_INCLUDE_DIRS}
+  ${Eigen_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
@@ -141,6 +147,10 @@ include_directories(
 add_executable(odomPub src/scripts/publOdom.cpp)
 add_dependencies(odomPub ${catkin_EXPORTED_TARGETS})
 target_link_libraries(odomPub ${catkin_LIBRARIES})
+
+add_executable(pid_controller src/scripts/general_pid.cpp)
+add_dependencies(pid_controller ${catkin_EXPORTED_TARGETS})
+target_link_libraries(pid_controller ${catkin_LIBRARIES})
 
 
 ## Rename C++ executable without prefix
